forth/test/fail/test_const_fold_divmod_zero.af
use' ../../lang.af
fun: test_const_fold_divmod_zero { -- rem quo } 29 0 /mod end
